--- a/example/fibonacci/dockerfiles/context/Dockerfile_fibonacci
+++ b/example/fibonacci/dockerfiles/context/Dockerfile_fibonacci
@@ -1,4 +1,4 @@
-FROM egistry.aliyun.xxx.xxx/annoroad/annogene-base:v0.1
+FROM registry.cn-beijing.aliyuncs.com/annoroad/annogene-base:v0.1
 MAINTAINER Zan Yuan <seqyuan@gmail.com>
 ENV LANG=en_US.UTF-8
 
